<resources>
    <string name="app_name">BuildingManager</string>
    <string name="favourite_buildings">Favourite Buildings</string>
    <string name="buildingid">Building ID</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="type">Type</string>
    <string name="architects">Architects</string>
    <string name="contractors">Contractors</string>
    <string name="materials">Materials</string>
    <string name="edit_building">Edit Building</string>
    <string name="size">Size</string>
    <string name="year_built">Year Built</string>
    <string name="description">Description</string>
    <string name="rating">Rating</string>
    <string name="delete_building">Delete Building</string>
    <string name="are_you_sure">Are you sure you want to delete this building?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- Add new strings if needed -->
    <string name="add_building">Add Building</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="welcome_message">Welcome to BuildingManager!</string>
    <string name="error_message">An error occurred. Please try again.</string>

    <!-- Existing string resources -->

    <string name="date_built">Date Built</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="cost">Cost</string>
    <string name="website">Website</string>
    <string name="image_url">Image URL</string>

</resources>
