<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/main"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".DetailsActivity">

    <TextView
            android:id="@+id/titleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edit_building"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id="@+id/buildingDetailsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleLabel"
            app:layout_constraintVertical_bias="1.0">


        <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="Autofill,LabelFor,SmallSp,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <TextView
                android:id="@+id/typeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/typeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="Autofill,LabelFor,SmallSp,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <TextView
                android:id="@+id/dateBuiltTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_built"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/dateBuiltEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="Autofill,LabelFor,SmallSp,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <TextView
                android:id="@+id/cityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/cityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="Autofill,LabelFor,SmallSp,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <TextView
                android:id="@+id/countryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/countryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="Autofill,LabelFor,SmallSp,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/descriptionMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Description"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
                android:id="@+id/architectsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/architects"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/architectsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="Autofill,LabelFor,SmallSp,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <TextView
                android:id="@+id/costTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cost"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/costEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                tools:ignore="Autofill,LabelFor,SmallSp,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <TextView
                android:id="@+id/websiteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/website"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/websiteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="Autofill,LabelFor,SmallSp,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <TextView
                android:id="@+id/imageUrlTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/image_url"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/imageUrlEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="Autofill,LabelFor,SmallSp,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <LinearLayout
                android:id="@+id/cancelUpdateButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#FFC107"
                    android:text="Cancel"
                    android:textColor="#000000"
                    android:textSize="20sp" />

            <Button
                    android:id="@+id/updateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#4CAF50"
                    android:text="Update"
                    android:textColor="#000000"
                    android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
